# fireaudit

./: .env.example  .gitignore  CLAUDE.md  CONFIGURACAO-CLAUDE-CODE.md  PLANO-DESENVOLVIMENTO.md  PROMPT-ABERTURA.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_refresh_tokens.py  0003_snapshot_indexes.py  0004_webhook_events_and_backfill_subs.py
backend/app/api/: deps.py  deps_auth.py  errors.py  main.py
backend/app/api/routers/: auth.py  firewalls.py  health.py  ingest.py  me.py  subscription.py
backend/app/api/schemas/: auth.py  findings.py  firewalls.py  ingest.py  me.py  rules.py  subscription.py
backend/app/application/: protocols.py
backend/app/application/checks/: agent_offline.py  duplicate_rule.py  expiring_cert.py  known_cve.py  risky_rule.py
backend/app/application/use_cases/: get_firewall.py  (+19 more)
backend/app/core/: config.py
backend/app/domain/: entities.py  errors.py
backend/app/infrastructure/: database.py  models.py  repositories.py  security.py  stripe_client.py
backend/app/workers/: snapshot_worker.py
backend/tests/: conftest.py  test_agent_offline_check.py  test_analyze_snapshot_use_case.py  test_analyze_snapshot_worker.py  test_auth_flow.py  test_auth_unit.py  test_create_organization.py  test_duplicate_rule_check.py  test_expiring_cert_check.py  test_findings.py  test_firewalls.py  test_health.py  test_ingest.py  test_known_cve_check.py  test_migrations.py  test_register.py  test_risky_rule_check.py  test_subscription.py  test_tier_guard.py
(+52 files in other folders)
